# esi-course-utwente

./: .buildinfo  01-exercises-data-analysis.html  01-tutorial-data-analysis.html  01-workshop-data-analysis.html  02-exercises-scenario-modelling.html  02-tutorial-scenario-modelling.html  03-exercises-capacity-expansion.html  03-tutorial-capacity-expansion.html  04-exercises-interconnection-and-multinodal.html  04-exercises-storage-and-interconnection.html  04-tutorial-interconnection-and-multinodal.html  04-tutorial-storage-and-interconnection.html  README.md  bonus-project-pointers.html  conclusion.html  environment.yml  genindex.html  installation-guide.md  intro.html  objects.inv  pyproject.toml  requirements.txt  search.html  searchindex.js
_sources/: 01-exercises-data-analysis.md  01-tutorial-data-analysis.ipynb  02-exercises-scenario-modelling.md  02-tutorial-scenario-modelling.md  03-exercises-capacity-expansion.md  03-tutorial-capacity-expansion.ipynb  04-exercises-interconnection-and-multinodal.md  04-exercises-storage-and-interconnection.md  04-tutorial-storage-and-interconnection.ipynb  conclusion.md
esi-modelling-workshop/: 01-exercises-data-analysis.md  01-tutorial-data-analysis.ipynb  01-workshop-data-analysis.ipynb  02-exercises-scenario-modelling.md  02-tutorial-scenario-modelling.md  03-exercises-capacity-expansion.md  03-tutorial-capacity-expansion.ipynb  04-exercises-storage-and-interconnection.md  04-tutorial-interconnection-and-multinodal.ipynb  _config.yml  _toc.yml  conclusion.md  convert_and_stack_logo.py  intro.md  make_exercises.py
(+20 files in other folders)
